Bug 579421 - Title bar(window without body) appears at the upper left corner of monitor screen. r=roc. (CLOSED TREE)